tests/baselines/reference/parserTypeQuery5.errors.txt
parserTypeQuery5.ts(1,15): error TS2304: Cannot find name 'A'.


==== parserTypeQuery5.ts (1 errors) ====
    var v: typeof A.B
                  ~
!!! error TS2304: Cannot find name 'A'.